--- a/.github/workflows/update_race_data.yml
+++ b/.github/workflows/update_race_data.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
     - name: Run script and save output to file
-      run: python next_race.py > next_race.txt
+      run: python nextrace.py > next_race.txt
     - name: Read output file into variable
       id: read_file
       run: echo "::set-output name=next_race::$(cat next_race.txt)"
@@ -30,6 +30,6 @@ jobs:
         sed -i 's/{{site.data.next_race}}/{{ site.data.next_race }}/g' index.md
     - name: Commit changes
       run: |
-        git config --global user.name 'Your Name'
-        git config --global user.email 'youremail@example.com'
+        git config --global user.name 'ajayprasad97'
+        git config --global user.email 'kawashakhi@gmail.com'
         git commit -am "Update index.md with latest F1 race information" && git push
