--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,4 +32,4 @@ jobs:
       run: |
         git config --global user.name 'ajayprasad97'
         git config --global user.email 'kawashakhi@gmail.com'
-        git commit -am "Update index.md with latest F1 race information" && git push
+        git add -A && git commit -m "Update index.md with latest F1 race information" && git push
